gallery and footer in both repos

--- a/randomgallery/index.html
+++ b/randomgallery/index.html
@@ -22,7 +22,20 @@
  <link href="https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed:400,700,800" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="css/base.css" />
 		<link rel="stylesheet" type="text/css" href="css/demo2.css" />
+<!-- dear developers
+ i know there are loads of commments
+ in this file and a few js files
+i did that for development purpose and plese dont remove them soon
 
+       -  regards SiD -->
+    <!-- custom changes by sid-->
+    <link rel="stylesheet" type="text/css" href="css/customchanges.css">
+
+    <!-- <link rel="stylesheet" type="text/css" href="css/cnormalize.css" /> -->
+    <!-- <link rel="stylesheet" type="text/css" href="css/demo.css" /> -->
+    <!-- <link rel="stylesheet" type="text/css" href="css/icons.css" /> -->
+    <link rel="stylesheet" type="text/css" href="css/component.css" />
+    <!-- <script src="js/modernizr.custom.js"></script> -->
 <!-- Normalize -->
 <link rel="stylesheet" type="text/css" href="css/normalize.css">
 <!-- Bootstrap -->
@@ -40,10 +53,12 @@
 
 <link rel="stylesheet" type="text/css" href="css/demo.css" />
 <link rel="stylesheet" type="text/css" href="css/style.css" />
-<script type="text/javascript" src="js/modernizr.custom.26633.js"></script>
+<!-- <script type="text/javascript" src="js/modernizr.custom.26633.js"></script> -->
 <noscript>
 <link rel="stylesheet" type="text/css" href="css/fallback.css" />
 </noscript>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 </head>
 
 <body>
@@ -66,11 +81,11 @@
 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	<ul class="nav navbar-nav navbar-right  main-nav">
 		<li><a href="#aboutus">About Us</a></li>
-		<li><a  href="#initiatives">Our Initiatives</a></li>
-		<li><a  href="#gallery">Gallery</a></li>
-		<li><a  href="#vigyaan">vigyaan</a></li>
+		<li><a href="#initiatives">Our Initiatives</a></li>
+		<li><a href="#gallery">Gallery</a></li>
+		<li><a href="#vigyaan">vigyaan</a></li>
     <li><a href="#sponsors">Sponsors</a></li>
-    <li><a  href="#team">Team</a></li>
+    <li><a href="#team">Team</a></li>
 
 		<li><a href="#" data-toggle="modal" data-target="#modal1" class="btn btn-blue">sign up</a></li>
 	</ul>
@@ -495,13 +510,23 @@
 				</div>
 			</div>
 		</main>
-    <section id="aboutus" class="section section-padded">
+</section>
+    <section id="aboutus" class="">
+      <!-- <section class="col-3 ss-style-slit"> -->
     <div class="container">
     <div class="row text-center title">
-    	<h2>About Us</h2>
+    	<h2 class="margin-top">About Us</h2>
     	<h4 class="light muted">Achieve the best results with our wide variety of training options!</h4>
+
     </div>
-    <div class="row services">
+    <!-- <div class="column"> -->
+      <!-- <span class="icon icon-location"></span> -->
+    <!-- </div> -->
+    <!-- <div class="column text">
+      <h2>Objectively innovate empowered manufactured products</h2>
+      <p>Galaxies a still more glorious dawn awaits shores of the cosmic ocean bits of moving fluff the only home we've ever known finite but unbounded colonies astonishment laws of physics a very small stage in a vast cosmic arena brain is the seed of intelligence realm of the galaxies Apollonius of Perga rogue intelligent beings courage of our questions made in the interiors</p>
+    </div> -->
+    <!-- <div class="row services">
     	<div class="col-md-4">
     		<div class="service">
     			<div class="icon-holder">
@@ -529,17 +554,20 @@
     			<p class="description">A elementum ligula lacus ac quam ultrices a scelerisque praesent vel suspendisse scelerisque a aenean hac montes.</p>
     		</div>
     	</div>
-    </div>
+    </div> -->
     </div>
     <div class="cut cut-bottom"></div>
     </section>
-    <section id="initiatives" class="section section-padded">
+</section>
+    <!-- <section id="initiatives" class="section section-padded"> -->
+      <section id="initiatives" class="section gray-bg">
+      <!-- <section class="col-3 ss-style-doublediagonal"> -->
 <div class="container">
 <div class="row text-center title">
-	<h2>Initiatives</h2>
+	<h2 class="margin-top">Initiatives</h2>
 	<h4 class="light muted">Achieve the best results with our wide variety of training options!</h4>
 </div>
-<div class="row services">
+<!-- <div class="row services">
 	<div class="col-md-4">
 		<div class="service">
 			<div class="icon-holder">
@@ -566,12 +594,14 @@
 			<h4 class="heading">Power Training</h4>
 			<p class="description">A elementum ligula lacus ac quam ultrices a scelerisque praesent vel suspendisse scelerisque a aenean hac montes.</p>
 		</div>
-	</div>
+	</div> -->
 </div>
 </div>
 <div class="cut cut-bottom"></div>
+<!-- </section> -->
+
 </section>
-<section id="gallery" class="section gray-bg">
+<section id="gallery" class="section">
   <div id="ri-grid" class="ri-grid ri-grid-size-3">
     <img class="ri-loading-image" src="images/loading.gif"/>
     <ul>
@@ -629,14 +659,16 @@
       <li><a href="#"><img src="images/medium/52.jpg"/></a></li>
       <li><a href="#"><img src="images/medium/53.jpg"/></a></li>
       <li><a href="#"><img src="images/medium/54.jpg"/></a></li>
+      
     </ul>
-  </div>
-  <!-- <div class="container">
+</div>
+<!--
+<div class="container">
 <div class="row title text-center">
 	<h2 class="margin-top">gallery</h2>
 	<h4 class="light muted">We're a dream team!</h4>
-</div>
-<div class="row">
+</div> -->
+<!-- <div class="row">
 	<div class="col-md-4">
 		<div class="team text-center">
 			<div class="cover" style="background:url('img/team/team-cover1.jpg'); background-size:cover;">
@@ -685,16 +717,21 @@
 			<a href="#" data-toggle="modal" data-target="#modal1" class="btn btn-blue-fill ripple">Sign Up Now</a>
 		</div>
 	</div>
-</div>
 </div> -->
+<!-- </div> -->
 </section>
-<section id="vigyaan" class="section">
+<section id="vigyaan" class="section  gray-bg">
+  <!-- <section class="col-3 ss-style-doublediagonal"> -->
+
+  <!-- <svg id="bigTriangleColor" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100" viewBox="0 0 100 102" preserveAspectRatio="none">
+  <path d="M0 0 L50 100 L100 0 Z" />
+</svg> -->
 <div class="container">
 <div class="row title text-center">
 	<h2 class="margin-top ">Vigyaan</h2>
 	<h4 class="light white">Choose your favorite pricing plan and sign up today!</h4>
 </div>
-<div class="row no-margin">
+<!-- <div class="row no-margin">
 	<div class="col-md-7 no-padding col-md-offset-5 pricings text-center">
 		<div class="pricing">
 			<div class="box-main active" data-img="img/pricing1.jpg">
@@ -731,10 +768,12 @@
 			</div>
 		</div>
 	</div>
+</div> -->
 </div>
-</div>
+<!-- </section> -->
 </section>
-<section class="section section-padded blue-bg">
+<!-- review section -->
+<!-- <section class="section section-padded blue-bg">
 <div class="container">
 <div class="row">
 	<div class="col-md-8 col-md-offset-2">
@@ -758,14 +797,14 @@
 	</div>
 </div>
 </div>
-</section>
-<section id="sponsors" class="section gray-bg">
+</section> -->
+<section id="sponsors" class="section ">
 <div class="container">
 <div class="row title text-center">
 	<h2 class="margin-top">sponsors</h2>
 	<h4 class="light muted">We're a dream team!</h4>
 </div>
-<div class="row">
+<!-- <div class="row">
 	<div class="col-md-4">
 		<div class="team text-center">
 			<div class="cover" style="background:url('img/team/team-cover1.jpg'); background-size:cover;">
@@ -814,15 +853,21 @@
 			<a href="#" data-toggle="modal" data-target="#modal1" class="btn btn-blue-fill ripple">Sign Up Now</a>
 		</div>
 	</div>
+</div> -->
 </div>
-</div>
-</section><section id="team" class="section gray-bg">
+</section>
+<section id="team" class="section gray-bg">
+  <!-- <section class="col-3 ss-style-doublediagonal"> -->
+
+  <!-- <svg id="curveDownColor" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100" viewBox="0 0 100 100" preserveAspectRatio="none">
+    <path d="M0 0 C 50 100 80 100 100 0 Z"/>
+  </svg> -->
 <div class="container">
 <div class="row title text-center">
 	<h2 class="margin-top">team</h2>
 	<h4 class="light muted">We're a dream team!</h4>
 </div>
-<div class="row">
+<!-- <div class="row">
 	<div class="col-md-4">
 		<div class="team text-center">
 			<div class="cover" style="background:url('img/team/team-cover1.jpg'); background-size:cover;">
@@ -871,8 +916,10 @@
 			<a href="#" data-toggle="modal" data-target="#modal1" class="btn btn-blue-fill ripple">Sign Up Now</a>
 		</div>
 	</div>
+</div> -->
 </div>
-</div>
+<!-- </section> -->
+
 </section>
 <div class="modal fade" id="modal1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 <div class="modal-dialog">
@@ -906,29 +953,10 @@
 </div>
 <footer>
 <div class="container">
-<div class="row">
-	<div class="col-sm-6 text-center-mobile">
-		<h3 class="white">Reserve a Free Trial Class!</h3>
-		<h5 class="light regular light-white">Shape your body and improve your health.</h5>
-		<a href="#" class="btn btn-blue ripple trial-button">Start Free Trial</a>
-	</div>
-	<div class="col-sm-6 text-center-mobile">
-		<h3 class="white">Opening Hours <span class="open-blink"></span></h3>
-		<div class="row opening-hours">
-			<div class="col-sm-6 text-center-mobile">
-				<h5 class="light-white light">Mon - Fri</h5>
-				<h3 class="regular white">9:00 - 22:00</h3>
-			</div>
-			<div class="col-sm-6 text-center-mobile">
-				<h5 class="light-white light">Sat - Sun</h5>
-				<h3 class="regular white">10:00 - 18:00</h3>
-			</div>
-		</div>
-	</div>
-</div>
+
 <div class="row bottom-footer text-center-mobile">
 	<div class="col-sm-8">
-		<p>&copy; 2015 All Rights Reserved. Powered by <a href="http://www.phir.co/">PHIr</a> exclusively for <a href="http://tympanus.net/codrops/">Codrops</a></p>
+		<p>&copy; organised by team technocracy </a> site made by <a href="http://tympanus.net/codrops/">web team</a></p>
 	</div>
 	<div class="col-sm-4 text-right text-center-mobile">
 		<ul class="social-footer">
@@ -966,8 +994,8 @@ $(function() {
 $( '#ri-grid' ).gridrotator( {
   rows : 4,
   columns : 8,
-  maxStep : 6,
-  interval : 2000,
+  maxStep : 3,
+  interval : 2500,
   w1024 : {
     rows : 5,
     columns : 6
