--- a/randomgallery/index.html
+++ b/randomgallery/index.html
@@ -527,6 +527,7 @@ i did that for development purpose and plese dont remove them soon
       <p>Galaxies a still more glorious dawn awaits shores of the cosmic ocean bits of moving fluff the only home we've ever known finite but unbounded colonies astonishment laws of physics a very small stage in a vast cosmic arena brain is the seed of intelligence realm of the galaxies Apollonius of Perga rogue intelligent beings courage of our questions made in the interiors</p>
     </div> -->
     <!-- <div class="row services">
+
     	<div class="col-md-4">
     		<div class="service">
     			<div class="icon-holder">
@@ -565,6 +566,7 @@ i did that for development purpose and plese dont remove them soon
 <div class="container">
 <div class="row text-center title">
 	<h2 class="margin-top">Initiatives</h2>
+
 	<h4 class="light muted">Achieve the best results with our wide variety of training options!</h4>
 </div>
 <!-- <div class="row services">
@@ -597,7 +599,7 @@ i did that for development purpose and plese dont remove them soon
 	</div> -->
 </div>
 </div>
-<div class="cut cut-bottom"></div>
+<!-- <div class="cut cut-bottom"></div> -->
 <!-- </section> -->
 
 </section>
@@ -659,7 +661,7 @@ i did that for development purpose and plese dont remove them soon
       <li><a href="#"><img src="images/medium/52.jpg"/></a></li>
       <li><a href="#"><img src="images/medium/53.jpg"/></a></li>
       <li><a href="#"><img src="images/medium/54.jpg"/></a></li>
-      
+
     </ul>
 </div>
 <!--
@@ -921,6 +923,7 @@ i did that for development purpose and plese dont remove them soon
 <!-- </section> -->
 
 </section>
+
 <div class="modal fade" id="modal1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 <div class="modal-dialog">
 <div class="modal-content modal-popup">
