--- a/secAvartan18/index.html
+++ b/secAvartan18/index.html
@@ -1236,10 +1236,10 @@ i did that for development purpose and plese dont remove them soon
 <script src="js/TweenMax.min.js"></script>
 <script src="js/DrawSVGPlugin.min.js"></script>
 <script src="js/demo2.js"></script>
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script type="text/javascript" src="http://cdn.jsdelivr.net/jquery.slick/1.5.3/slick.min.js"></script>
-<script type="text/javascript" src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/jquery.slick/1.5.3/slick.min.js"></script>
+<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/jquery.gridrotator.js"></script>
 <script src="js/team.js"></script>
 <!-- <link rel="stylesheet" type="text/css" href="css/team.css"> -->
