--- a/AavartanBeta18/index.html
+++ b/AavartanBeta18/index.html
@@ -1326,14 +1326,14 @@ i did that for development purpose and plese dont remove them soon
   <!-- <svg id="curveDownColor" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100" viewBox="0 0 100 100" preserveAspectRatio="none">
     <path d="M0 0 C 50 100 80 100 100 0 Z"/>
   </svg> -->
-<div class="container">
+<div id="teampad" class="container">
 <div class="row title text-center">
 	<h2 class="margin-top">team</h2>
 	<h4 class="light muted">We're a dream team!</h4>
 </div>
-<div class="container">
+<div id="teampa" class="container">
    <div class="row">
-      <div class="col-sm-12">
+      <div  class="col-sm-12">
          <div class="carousel slide" data-ride="carousel" id="carousel-example-generic">
             <div class="carousel-inner" role="listbox">
                <div class="item active">
