--- a/AavartanBeta18/index.html
+++ b/AavartanBeta18/index.html
@@ -817,7 +817,7 @@ i did that for development purpose and plese dont remove them soon
 </div>
 </section> -->
 <section id="sponsors" class="section ">
- <div class="container">
+ <div  id="sponspad" class="container" style="padding:auto 0;">
 <div class="row title text-center">
 	<h2 class="margin-top">sponsors</h2>
 	<h4 class="light muted">We're a dream team!</h4>
@@ -832,287 +832,156 @@ i did that for development purpose and plese dont remove them soon
           <div class="bigs"  data-p="30.00">
             <div  class="cube-container sss first">
             				<div class="photo-cube">
-
+                      <img class="front" src="images/medium/50.jpg" alt="">
             					<div class="back photo-desc">
-            					  <h3>Earth from Space</h3>
+            					  <h3>The Milky Way</h3>
             					  <p>Aenean lacinia bibendum nulla sed consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
             						<a href="#" class="button">download</a>
             					</div>
+            					<img class="left" src="images/medium/50.jpg" alt="">
             					<img class="right" src="images/medium/50.jpg" alt="">
-
             				</div>
             			</div>
-              <!-- <img data-u="image" src="img/003.jpg" /> -->
           </div>
           <div class="bigs"  data-p="30.00">
             <div  class="cube-container sss first">
-            				<div class="photo-cube">
-
-            					<div class="back photo-desc">
-            					  <h3>Earth from Space</h3>
-            					  <p>Aenean lacinia bibendum nulla sed consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-            						<a href="#" class="button">download</a>
-            					</div>
-            					<img class="right" src="images/medium/50.jpg" alt="">
-
-            				</div>
-            			</div>
-              <!-- <img data-u="image" src="img/003.jpg" /> -->
+                    <div class="photo-cube">
+                      <img class="front" src="images/medium/50.jpg" alt="">
+                      <div class="back photo-desc">
+                        <h3>The Milky Way</h3>
+                        <p>Aenean lacinia bibendum nulla sed consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+                        <a href="#" class="button">download</a>
+                      </div>
+                      <img class="left" src="images/medium/50.jpg" alt="">
+                      <img class="right" src="images/medium/50.jpg" alt="">
+                    </div>
+                  </div>
           </div>
           <div class="bigs"  data-p="30.00">
             <div  class="cube-container sss first">
-            				<div class="photo-cube">
-
-            					<div class="back photo-desc">
-            					  <h3>Earth from Space</h3>
-            					  <p>Aenean lacinia bibendum nulla sed consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-            						<a href="#" class="button">download</a>
-            					</div>
-            					<img class="right" src="images/medium/50.jpg" alt="">
-
-            				</div>
-            			</div>
-              <!-- <img data-u="image" src="img/003.jpg" /> -->
-          </div>
-          <div data-p="30.00">
-            <div  class="cube-container sss first">
                     <div class="photo-cube">
-
+                      <img class="front" src="images/medium/50.jpg" alt="">
                       <div class="back photo-desc">
-                        <h3>Earth from Space</h3>
+                        <h3>The Milky Way</h3>
                         <p>Aenean lacinia bibendum nulla sed consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
                         <a href="#" class="button">download</a>
                       </div>
+                      <img class="left" src="images/medium/50.jpg" alt="">
                       <img class="right" src="images/medium/50.jpg" alt="">
-
                     </div>
                   </div>
-              <!-- <img data-u="image" src="img/003.jpg" /> -->
           </div>
-          <div data-p="30.00">
+          <div class="bigs"  data-p="30.00">
             <div  class="cube-container sss first">
                     <div class="photo-cube">
-
+                      <img class="front" src="images/medium/50.jpg" alt="">
                       <div class="back photo-desc">
-                        <h3>Earth from Space</h3>
+                        <h3>The Milky Way</h3>
                         <p>Aenean lacinia bibendum nulla sed consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
                         <a href="#" class="button">download</a>
                       </div>
+                      <img class="left" src="images/medium/50.jpg" alt="">
                       <img class="right" src="images/medium/50.jpg" alt="">
-
                     </div>
                   </div>
-              <!-- <img data-u="image" src="img/003.jpg" /> -->
           </div>
-          <div class="bigs" data-p="30.00">
+          <div class="bigs"  data-p="30.00">
             <div  class="cube-container sss first">
                     <div class="photo-cube">
-
+                      <img class="front" src="images/medium/50.jpg" alt="">
                       <div class="back photo-desc">
-                        <h3>Earth from Space</h3>
+                        <h3>The Milky Way</h3>
                         <p>Aenean lacinia bibendum nulla sed consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
                         <a href="#" class="button">download</a>
                       </div>
+                      <img class="left" src="images/medium/50.jpg" alt="">
                       <img class="right" src="images/medium/50.jpg" alt="">
-
                     </div>
                   </div>
-              <!-- <img data-u="image" src="img/003.jpg" /> -->
           </div>
-          <div data-p="30.00">
+          <div class="bigs"  data-p="30.00">
             <div  class="cube-container sss first">
                     <div class="photo-cube">
-
+                      <img class="front" src="images/medium/50.jpg" alt="">
                       <div class="back photo-desc">
-                        <h3>Earth from Space</h3>
+                        <h3>The Milky Way</h3>
                         <p>Aenean lacinia bibendum nulla sed consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
                         <a href="#" class="button">download</a>
                       </div>
+                      <img class="left" src="images/medium/50.jpg" alt="">
                       <img class="right" src="images/medium/50.jpg" alt="">
-
                     </div>
                   </div>
-              <!-- <img data-u="image" src="img/003.jpg" /> -->
           </div>
-          <div data-p="30.00">
+          <div class="bigs"  data-p="30.00">
             <div  class="cube-container sss first">
                     <div class="photo-cube">
-
+                      <img class="front" src="images/medium/50.jpg" alt="">
                       <div class="back photo-desc">
-                        <h3>Earth from Space</h3>
+                        <h3>The Milky Way</h3>
                         <p>Aenean lacinia bibendum nulla sed consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
                         <a href="#" class="button">download</a>
                       </div>
+                      <img class="left" src="images/medium/50.jpg" alt="">
                       <img class="right" src="images/medium/50.jpg" alt="">
-
                     </div>
                   </div>
-              <!-- <img data-u="image" src="img/003.jpg" /> -->
           </div>
-          <div data-p="30.00">
+          <div class="bigs"  data-p="30.00">
             <div  class="cube-container sss first">
                     <div class="photo-cube">
-
+                      <img class="front" src="images/medium/50.jpg" alt="">
                       <div class="back photo-desc">
-                        <h3>Earth from Space</h3>
+                        <h3>The Milky Way</h3>
                         <p>Aenean lacinia bibendum nulla sed consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
                         <a href="#" class="button">download</a>
                       </div>
+                      <img class="left" src="images/medium/50.jpg" alt="">
                       <img class="right" src="images/medium/50.jpg" alt="">
-
                     </div>
                   </div>
-              <!-- <img data-u="image" src="img/003.jpg" /> -->
           </div>
-          <div data-p="30.00">
+          <div class="bigs"  data-p="30.00">
             <div  class="cube-container sss first">
                     <div class="photo-cube">
-
+                      <img class="front" src="images/medium/50.jpg" alt="">
                       <div class="back photo-desc">
-                        <h3>Earth from Space</h3>
+                        <h3>The Milky Way</h3>
                         <p>Aenean lacinia bibendum nulla sed consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
                         <a href="#" class="button">download</a>
                       </div>
+                      <img class="left" src="images/medium/50.jpg" alt="">
                       <img class="right" src="images/medium/50.jpg" alt="">
-
                     </div>
                   </div>
-              <!-- <img data-u="image" src="img/003.jpg" /> -->
           </div>
-          <div data-p="30.00">
+          <div class="bigs"  data-p="30.00">
             <div  class="cube-container sss first">
                     <div class="photo-cube">
-
+                      <img class="front" src="images/medium/50.jpg" alt="">
                       <div class="back photo-desc">
-                        <h3>Earth from Space</h3>
+                        <h3>The Milky Way</h3>
                         <p>Aenean lacinia bibendum nulla sed consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
                         <a href="#" class="button">download</a>
                       </div>
+                      <img class="left" src="images/medium/50.jpg" alt="">
                       <img class="right" src="images/medium/50.jpg" alt="">
-
                     </div>
                   </div>
-              <!-- <img data-u="image" src="img/003.jpg" /> -->
           </div>
-          <div data-p="30.00">
+          <div class="bigs"  data-p="30.00">
             <div  class="cube-container sss first">
                     <div class="photo-cube">
-
+                      <img class="front" src="images/medium/50.jpg" alt="">
                       <div class="back photo-desc">
-                        <h3>Earth from Space</h3>
+                        <h3>The Milky Way</h3>
                         <p>Aenean lacinia bibendum nulla sed consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
                         <a href="#" class="button">download</a>
                       </div>
+                      <img class="left" src="images/medium/50.jpg" alt="">
                       <img class="right" src="images/medium/50.jpg" alt="">
-
                     </div>
                   </div>
-              <!-- <img data-u="image" src="img/003.jpg" /> -->
-          </div>
-          <div data-p="30.00">
-            <div  class="cube-container sss first">
-                    <div class="photo-cube">
-
-                      <div class="back photo-desc">
-                        <h3>Earth from Space</h3>
-                        <p>Aenean lacinia bibendum nulla sed consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-                        <a href="#" class="button">download</a>
-                      </div>
-                      <img class="right" src="images/medium/50.jpg" alt="">
-
-                    </div>
-                  </div>
-              <!-- <img data-u="image" src="img/003.jpg" /> -->
-          </div>
-          <div data-p="30.00">
-            <div  class="cube-container sss first">
-                    <div class="photo-cube">
-
-                      <div class="back photo-desc">
-                        <h3>Earth from Space</h3>
-                        <p>Aenean lacinia bibendum nulla sed consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-                        <a href="#" class="button">download</a>
-                      </div>
-                      <img class="right" src="images/medium/50.jpg" alt="">
-
-                    </div>
-                  </div>
-              <!-- <img data-u="image" src="img/003.jpg" /> -->
-          </div>
-          <div data-p="30.00">
-            <div  class="cube-container sss first">
-                    <div class="photo-cube">
-
-                      <div class="back photo-desc">
-                        <h3>Earth from Space</h3>
-                        <p>Aenean lacinia bibendum nulla sed consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-                        <a href="#" class="button">download</a>
-                      </div>
-                      <img class="right" src="images/medium/50.jpg" alt="">
-
-                    </div>
-                  </div>
-              <!-- <img data-u="image" src="img/003.jpg" /> -->
-          </div>
-          <div data-p="30.00">
-            <div  class="cube-container sss first">
-                    <div class="photo-cube">
-
-                      <div class="back photo-desc">
-                        <h3>Earth from Space</h3>
-                        <p>Aenean lacinia bibendum nulla sed consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-                        <a href="#" class="button">download</a>
-                      </div>
-                      <img class="right" src="images/medium/50.jpg" alt="">
-
-                    </div>
-                  </div>
-              <!-- <img data-u="image" src="img/003.jpg" /> -->
-          </div>
-          <div data-p="30.00">
-            <div  class="cube-container sss first">
-                    <div class="photo-cube">
-
-                      <div class="back photo-desc">
-                        <h3>Earth from Space</h3>
-                        <p>Aenean lacinia bibendum nulla sed consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-                        <a href="#" class="button">download</a>
-                      </div>
-                      <img class="right" src="images/medium/50.jpg" alt="">
-
-                    </div>
-                  </div>
-              <!-- <img data-u="image" src="img/003.jpg" /> -->
-          </div>
-          <div data-p="30.00">
-            <div  class="cube-container sss first">
-                    <div class="photo-cube">
-
-                      <div class="back photo-desc">
-                        <h3>Earth from Space</h3>
-                        <p>Aenean lacinia bibendum nulla sed consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-                        <a href="#" class="button">download</a>
-                      </div>
-                      <img class="right" src="images/medium/50.jpg" alt="">
-
-                    </div>
-                  </div>
-              <!-- <img data-u="image" src="img/003.jpg" /> -->
-          </div>
-          <div data-p="30.00">
-            <div  class="cube-container sss first">
-                    <div class="photo-cube">
-
-                      <div class="back photo-desc">
-                        <h3>Earth from Space</h3>
-                        <p>Aenean lacinia bibendum nulla sed consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-                        <a href="#" class="button">download</a>
-                      </div>
-                      <img class="right" src="images/medium/50.jpg" alt="">
-
-                    </div>
-                  </div>
-              <!-- <img data-u="image" src="img/003.jpg" /> -->
           </div>
           <!-- <div data-p="30.00">
               <img data-u="image" src="img/004.jpg" />
@@ -1786,7 +1655,7 @@ $(function() {
 $( '#ri-grid' ).gridrotator( {
   rows : 4,
   columns : 8,
-  maxStep : 3,
+  maxStep : 4,
   interval : 2500,
   w1024 : {
     rows : 4,
